SubBt/force-app/main/default/objects/Billings__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Sum of all Receivables Lines</description>
    <label>SubTotal</label>
    <summarizedField>Billable_Lines__c.Total__c</summarizedField>
    <summaryForeignKey>Billable_Lines__c.Billings__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>