SubBt/force-app/main/default/objects/Billings__c/fields/Approved_CO__c.field-meta.xml
<CustomField>
    <fullName>Approved_CO__c</fullName>
    <label>Approved CO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>