SubBt/force-app/main/default/objects/Billings__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Change_Order__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipName>Accounts_Receivables</relationshipName>
    <type>Lookup</type>
</CustomField>