SubBt/force-app/main/default/objects/Billings__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date the Invoice is Due.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>