SubBt/force-app/main/default/objects/Billings__c/fields/HST__c.field-meta.xml
<CustomField>
    <fullName>HST__c</fullName>
    <label>HST #</label>
    <type>TextArea</type>
</CustomField>