SubBt/force-app/main/default/objects/Billings__c/fields/invoice_number__c.field-meta.xml
<CustomField>
    <fullName>invoice_number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&apos;-&apos;&amp; Auto_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INV #</label>
    <type>Text</type>
</CustomField>