SubBt/force-app/main/default/objects/Billings__c/fields/Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Date__c</fullName>
    <inlineHelpText>This date reflects the date that you email the Invoice to the customer.  If you are not emailing the customer then you can manually update this field.</inlineHelpText>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>