SubBt/force-app/main/default/objects/Billings__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Accounts_Receivables</relationshipName>
    <type>Lookup</type>
</CustomField>