SubBt/force-app/main/default/objects/Billings__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Invoices (AR)</relationshipLabel>
    <relationshipName>Invoices_AR</relationshipName>
    <type>Lookup</type>
</CustomField>