SubBt/force-app/main/default/objects/Billings__c/fields/Receipts__c.field-meta.xml
<CustomField>
    <fullName>Receipts__c</fullName>
    <label>Receipts</label>
    <summarizedField>Receipt__c.Amount__c</summarizedField>
    <summaryForeignKey>Receipt__c.Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>