SubBt/force-app/main/default/objects/Billings__c/fields/Tax_VAT_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_VAT_ID__c</fullName>
    <label>Tax/VAT ID</label>
    <type>TextArea</type>
</CustomField>