SubBt/force-app/main/default/objects/Billings__c/fields/Total_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Tax__c</fullName>
    <formula>Amount__c + ( Amount__c * Tax_Rate__c ) + Approved_CO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>