SubBt/force-app/main/default/objects/Billings__c/recordTypes/Existing_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Existing_Invoice</fullName>
    <active>true</active>
    <label>Existing Invoice</label>
</RecordType>