SubBt/force-app/main/default/objects/Billings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Auto_Number__c</columns>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Aging__c</columns>
    <columns>Total_Amount_Tax__c</columns>
    <columns>Receipts__c</columns>
    <columns>Balance__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>