SubBt/force-app/main/default/objects/Billings__c/listViews/All_Open_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Open_Invoices</fullName>
    <columns>Project__c</columns>
    <columns>invoice_number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Aging__c</columns>
    <columns>Total_Amount_Tax__c</columns>
    <columns>Receipts__c</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All Open Invoices</label>
</ListView>