SubBt/force-app/main/default/objects/Billings__c/listViews/Paid_Invoices.listView-meta.xml
<ListView>
    <fullName>Paid_Invoices</fullName>
    <columns>Project__c</columns>
    <columns>Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Terms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Paid,Partially Paid</value>
    </filters>
    <label>Paid Invoices</label>
</ListView>